# memoire

./: .gitignore  README.md
HOST/dma/host_memory/: dma.c  meson.build
HOST/dma/nic_memory/: dma.c  meson.build
HOST/dma/test/: dma.c  meson.build
HOST/dma_dpdk/host_mem_only_desc/: dma_dpdk.c  meson.build  one_buff.c  only_dma.c  save.c  save_1.c  server.c  wip.c
HOST/dpdk/: meson.build  server.c
HOST/dpdk/ASQ/: data.csv  server.c
HOST/dpdk/Baseline/: data.csv  ip.c  meson.build
HOST/dpdk/gather/: server.c
HOST/dpdk/ip_desc/: .ip.c.swp  ip.c  meson.build  save_1.c
HOST/dpdk/port_forward/: counter.c  meson.build
NIC/dma/host_memory/: dma.c  meson.build
NIC/dma/nic_memory/: dma.c  meson.build
NIC/dma/test/: .dma.c.swp  dma.c  meson.build
NIC/dma_dpdk/host_mem_only_desc/: .dma_dpdk.c.swp  dma_dpdk.c  local.c  meson.build  one_buff.c  only_dma.c  only_dma.c.save  only_dpdk.c  save.c  save_2.c  wip.c  without_dma.c  without_dma_1_core.c
NIC/dpdk/: .client.c.swp  client.c
NIC/dpdk/ASQ/: .client.c.swp  client.c  data.csv  huge.c  meson.build
NIC/dpdk/Baseline/: forward.c  meson.build
NIC/dpdk/big_payload/: client.c  meson.build
NIC/dpdk/gather/: .client.c.swp  client.c  huge.c  perf.data
NIC/dpdk/port_forward/: forward.c
utils/: .dma_exchange.c.swp  MACaddress.c  MACaddress.h  dma_exchange.c  dma_exchange.h  port_init.c  port_init.h  receive_data_from_host.c  receive_data_from_host.h  set_dma_buffer.c  set_dma_buffer.h
